# XXTEA-Rust

./: Cargo.toml  README.md
src/: lib.rs  xxtea.rs
tests/: tests.rs
