[package]
name = "xxtea"
description = "XXTEA encryption algorithm library"
authors = ["ambiguous404@gmail.com", "daniel_digeraas@netile.se"]
homepage = "https://crates.io/crates/xxtea"
repository = "https://github.com/Hanaasagi/XXTEA-Rust"
version = "0.2.0"
license = "MIT"

[dependencies]

[dev-dependencies]
rand = "0.3"








